[workspace]
resolver = "1"
members = [
  "packages/async-task-local",
  "packages/async-tpc-executor",
  "packages/driver-db",
  "packages/driver-engine",
  "packages/driver-query-boa",
  "packages/driver-query-comrak",
  "packages/driver-query-fs",
  "packages/driver-query-hyper",
  "packages/driver-query-minify-html",
  "packages/driver-query-tera",
  "packages/driver-query-zune",
  "packages/driver-util",
  "packages/smol-hyper-client",

  "bin/driver",
]
