[workspace]
resolver = "1"
members = [
  "packages/async-task-local",
  "packages/async-tpc-executor",
  "packages/driver-db",
  "packages/driver-engine",
  "packages/driver-query-fs",
  "packages/driver-query-hyper",
  "packages/driver-query-ssg",
  "packages/driver-util",
  "packages/smol-hyper-client",

  "bin/driver",
]
