[workspace]
resolver = "1"
members = [
  "packages/async-task-local",
  "packages/async-tpc-executor",
  "packages/driver-db",
  "packages/driver-engine",
  "packages/driver-query-fs",
  "packages/driver-query-hyper",
  "packages/driver-query-wasm",
  "packages/driver-util",
  # "packages/driver-wasm-api",
  "packages/smol-hyper-client",

  "bin/driver",

  # "bin/wasm/boa",
  # "bin/wasm/comrak",
  # "bin/wasm/minify_html",
  # "bin/wasm/tera",
  # "bin/wasm/zune",
]
