[package]
name = "query"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4", features = ["zstd"] }
comrak = { version = "0.50", features = ["syntect"] }
dyn-clone = "1.0"
either = "1.15"
futures-concurrency = "7.7"
futures-lite = "2.6"
generic-array = { version = "0.14", features = ["serde"] }
hex = "0.4"
ignore = "0.4"
jiff = { version = "0.2", features = ["serde"] }
minify-html = "0.18"
relative-path = "2.0"
postcard = { version = "1.1", features = ["use-std"] }
pub_if = "0.1.0"
scc = "3.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
zune-core = "0.5"
zune-imageprocs = "0.5"

# This is necessary until I upstream my changes
[dependencies.boa_engine]
version = "0.21"
default-features = false
features = ["either", "temporal"]

[dependencies.boa_gc]
version = "0.21"
features = ["boa_string", "either"]

[dependencies.reqwest]
version = "0.13"
features = [
  "blocking",
  "gzip",
  "http2",
  "zstd",
]

[dependencies.zune-image]
version = "0.5"
default-features = false
features = [
  "log",
  "metadata",
  "simd",
  "threads",
  "jpeg",
  "jpeg-xl",
  "png",
  "webp",
]
