[package]
name = "query"
version = "0.1.0"
edition = "2024"

[dependencies]
task-local = { path = "../task-local" }
async-broadcast = "0.7"
async-executor = "1.14"
async-fs = "2.2"
async-native-tls = "0.6"
async-net = "2.0"
async-task = "4.7"
boa_engine = { version = "0.21", default-features = false, features = ["temporal"] }
boa_gc = { version = "0.21", features = ["boa_string"] }
comrak = { version = "0.52", features = ["syntect"] }
dyn-clone = "1.0"
either = "1.15"
flume = "0.12"
futures-concurrency = "7.7"
futures-lite = "2.6"
generic-array = { version = "0.14", features = ["serde"] }
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["client", "http1"] }
ignore = "0.4"
jiff = { version = "0.2", features = ["serde"] }
minify-html = "0.18"
num_cpus = "1.17"
relative-path = "2.0"
oneshot = { version = "0.2", features = ["async"] }
postcard = { version = "1.1", features = ["use-std"] }
scc = "3.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
smol-hyper = "0.1"
tracing = "0.1"
zstd = "0.13"
zune-core = "0.5"
zune-imageprocs = "0.5"

[dependencies.zune-image]
version = "0.5"
default-features = false
features = [
  "log",
  "metadata",
  "simd",
  "threads",
  "jpeg",
  "jpeg-xl",
  "png",
  "webp",
]
